--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "tslint": "^5.16.0",
     "typescript": "^4.8.3",
     "yargs": "^13.2.4"
+  },
+  "devDependencies": {
+    "@types/jquery": "^3.5.14"
   }
 }
